todo-get-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get
spec:
  selector:
    matchLabels:
      app: get
  replicas: 3
  template:
    metadata:
      labels:
        app: get
    spec:
      containers:
      - name: get
        image: todoappconatinerregistry.azurecr.io/todo-ui-service:v2
        ports:
        - containerPort: 8000
