todo-get-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-get-service
spec:
  selector:
    app: todo-get-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
